Add link for index page.

--- a/About_me.html
+++ b/About_me.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <h1>My Portfolio</h1>
+        <h1><a href="/">My Portfolio</a></h1>
 
         <ul class="navbar">
             <li><a href="About_me.html">About me</a></li>
@@ -22,7 +22,7 @@
     <div>
     <h4>Exploring myself:</h4>
     <p>My name is Salina Rai,23, permanent resident of Dhankuta, East Nepal.</p>
-    <p> am present here as I love doing these kind of stuffs.</p>
+    <p>I am present here as I love doing these kind of stuffs.</p>
     <p>I do engage myself here whenever I get free time.</p>
     <p>I do believe that '<strong>Hardship</strong><em> is the key to success and</em> <strong>success</strong><em>is the outcome of</em><strong> never giving up.'</strong></p>
    <p> Except this field, I am a teacher by profession.</p>
