--- a/hobbies.html
+++ b/hobbies.html
@@ -11,7 +11,7 @@
 <body>
     
     <nav>
-        <h1>My Portfolio</h1>
+        <h1><a href="/">My Portfolio</a></h1>
          <ul class="navbar">
             <li><a href="About_me.html">About me</a></li>
             <li><a href="hobbies.html">My hobbies</a></li>
